Renamed Docs to API Schema

--- a/kcrud-server/src/main/resources/openapi/redoc.html
+++ b/kcrud-server/src/main/resources/openapi/redoc.html
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2023-Present Perraco Labs. All rights reserved.
+  ~ Copyright (c) 2024-Present Perraco Labs. All rights reserved.
   ~ This work is licensed under the terms of the MIT license.
   ~ For a copy, see <https://opensource.org/licenses/MIT>
   -->
@@ -8,13 +8,13 @@
 <!--suppress JSUnresolvedLibraryURL, HtmlUnknownTag, JSUnresolvedReference -->
 <html lang="en">
 <head>
-    <title>ReDoc API Documentation</title>
+    <title>ReDoc API Schema</title>
     <script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"></script>
 </head>
 <body>
-<redoc spec-url='../documentation.yaml'></redoc>
+<redoc spec-url='./documentation.yaml'></redoc>
 <script>
-    Redoc.init('../documentation.yaml');
+    Redoc.init('./documentation.yaml');
 </script>
 </body>
 </html>
